Update Gradle to 9.6.1